Update barrelling method for loader and main nav and fixes and issue with docs visibility of icons

--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -815,10 +815,10 @@ $header-height: 151px;
   }
 }
 
-.material-icons-loading .nsw-material-icons {
+.material-icons-loading .nsw-docs__nav .nsw-material-icons {
   visibility: hidden;
 }
 
-.material-icons-loaded .nsw-material-icons {
+.material-icons-loaded .nsw-docs__nav .nsw-material-icons {
   visibility: visible;
 }
